# proxion-core

./: .gitignore  CAPABILITIES.md  README.md  pyproject.toml
docs/: EI_WITNESS_QR_SOLID_SECURE_CHANNEL.md  conformance-checklist.md  ui-mapping.md
src/proxion_core/: __init__.py  attenuation.py  caveats.py  context.py  crypto.py  errors.py  federation.py  revocation.py  serialization.py  tickets.py  tokens.py  validator.py
src/proxion_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
storage/network/adguard/conf/: AdGuardHome.yaml
storage/network/adguard/work/data/: stats.db
storage/network/adguard/work/data/filters/: 1.txt
storage/security/vaultwarden/: db.sqlite3  rsa_key.pem
tests/: test_attenuation.py  test_caveats.py  test_federation.py  test_tickets.py  test_tokens.py  test_validator.py
