[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proxion-core"
version = "0.1.0"
description = "EI0 reference implementation for Proxion Universal Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
